fixed overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,6 +106,7 @@ body {
     .carousel-container {
         width: 100%;
         height: 100%;
+        overflow:hidden;
         margin-bottom: 20px;
 
     }
@@ -128,6 +129,7 @@ body {
 
     #prevBtn:hover {
         color: #fc6020;
+        cursor: pointer;
     }
 
     #nextBtn {
@@ -143,6 +145,7 @@ body {
 
     #nextBtn:hover {
         color: #fc6020;
+        cursor: pointer;
     }
 
    .slide-photo{
